--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "ui:add": "pnpm --filter ui ui:add"
   },
   "devDependencies": {
-    "@turbo/gen": "^1.9.7",
-    "eslint": "^7.32.0",
+    "@turbo/gen": "^1.10.12",
+    "eslint": "^8.47.0",
     "eslint-config-custom": "workspace:*",
-    "prettier": "^2.5.1",
-    "turbo": "latest"
+    "prettier": "^3.0.1",
+    "turbo": "^1.10.12"
   },
   "packageManager": "pnpm@7.15.0"
 }
