--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -5,11 +5,19 @@
   "license": "MIT",
   "dependencies": {
     "eslint-config-next": "^13.4.1",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-turbo": "^1.9.3",
     "eslint-plugin-react": "7.28.0",
-    "eslint-config-turbo": "^1.9.3"
+    "eslint-config-prettier": "^8.8.0"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prettier-plugin-tailwindcss": "^0.5.2"
   }
 }
