--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@turbo/gen": "^1.10.12",
-    "cz-conventional-changelog": "3.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.47.0",
     "eslint-config-custom": "workspace:*",
     "husky": "^8.0.3",
