--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,9 @@
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "ui": "workspace:*",
+    "contentlayer": "^0.3.4",
+    "next-contentlayer": "^0.3.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
@@ -23,6 +25,6 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "tsconfig": "workspace:*",
-    "typescript": "^4.5.3"
+    "typescript": "^5.1.6"
   }
 }
