--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.15.1",
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ui": "workspace:*",
     "contentlayer": "^0.3.4",
-    "next-contentlayer": "^0.3.4"
+    "next-contentlayer": "^0.3.4",
+    "next-themes": "^0.2.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
