--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.23.2",
     "framer-motion": "^10.15.1",
     "next": "^13.4.1",
     "react": "^18.2.0",
