--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,7 +17,11 @@
     "ui": "workspace:*",
     "contentlayer": "^0.3.4",
     "next-contentlayer": "^0.3.4",
-    "next-themes": "^0.2.1"
+    "next-themes": "^0.2.1",
+    "react-hook-form": "^7.45.4",
+    "zod": "^3.21.4",
+    "@hookform/resolvers": "^3.2.0",
+    "react-turnstile": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
