--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "next": "^13.4.1",
+    "nextra": "^2.11.0",
+    "nextra-theme-docs": "^2.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ui": "workspace:*"
