fix: cloudflair site key should be prefix with NEXT_PUBLIC

--- a/turbo.json
+++ b/turbo.json
@@ -1,10 +1,11 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
   "globalDotEnv": [".env"],
+  "globalEnv": ["NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY"],
+  "globalDependencies": ["$NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY"],
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "$NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY"],
       "outputs": [".next/**", "!.next/cache/**"],
       "dotEnv": [
         ".env.production.local",
