--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,34 +3,34 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
-    "framer-motion": "^10.15.1",
-    "next": "^13.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ui": "workspace:*",
+    "@hookform/resolvers": "^3.2.0",
     "contentlayer": "^0.3.4",
+    "framer-motion": "^10.16.0",
+    "next": "^13.4.16",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
-    "zod": "^3.21.4",
-    "@hookform/resolvers": "^3.2.0",
-    "react-turnstile": "^1.1.1"
+    "react-turnstile": "^1.1.1",
+    "ui": "workspace:*",
+    "zod": "^3.22.1"
   },
   "devDependencies": {
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "autoprefixer": "^10.4.14",
+    "@types/node": "^20.5.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.15",
     "eslint-config-custom": "workspace:*",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3",
     "tsconfig": "workspace:*",
     "typescript": "^5.1.6"
   }
