--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "lint-staged": "^14.0.0",
     "prettier": "^3.0.2",
     "standard-version": "^9.5.0",
+    "vercel": "^31.3.1",
     "turbo": "^1.10.12"
   },
-  "packageManager": "pnpm@7.15.0"
+  "packageManager": "pnpm@7.15.0",
+  "dependencies": {}
 }
