--- a/.gitignore
+++ b/.gitignore
@@ -23,11 +23,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
 
 # turbo
 .turbo
