--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDotEnv": [".env"],
+  "globalEnv": ["NODE_ENV", "STRIPE_API_KEY", "NEXT_PUBLIC_APP_URL"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
