--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.45.4",
     "react-turnstile": "^1.1.1",
     "ui": "workspace:*",
+    "valibot": "^0.12.0",
     "zod": "^3.22.1"
   },
   "devDependencies": {
