--- a/apps/dash/package.json
+++ b/apps/dash/package.json
@@ -27,6 +27,7 @@
     "replicate": "^0.16.1",
     "stripe": "^12.18.0",
     "ui": "workspace:*",
+    "valibot": "^0.12.0",
     "zod": "^3.21.4",
     "zustand": "^4.4.1"
   },
