refactor: _app.tsx to _app.mdx for better performance

--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -14,7 +14,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "theme.config.jsx"
+    "theme.config.jsx",
+    "pages/_app.mdx"
   ],
   "exclude": ["node_modules"]
 }
