feat: add metadata and set og image
Closes AV-128, closes AV-111, closes AV-112

--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,8 @@
       "dependsOn": ["^build"],
       "env": [
         "NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY",
-        "CLOUDFLARE_TURNSTILE_SECRET"
+        "CLOUDFLARE_TURNSTILE_SECRET",
+        "NEXT_PUBLIC_APP_URL"
       ],
       "outputs": [".next/**", "!.next/cache/**"]
     },
