--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
     "@hookform/resolvers": "^3.2.0",
+    "@slack/web-api": "^6.9.0",
     "contentlayer": "^0.3.4",
     "framer-motion": "^10.16.0",
     "next": "^13.4.16",
