--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,8 @@
       "dependsOn": ["^build"],
       "env": [
         "NEXT_PUBLIC_CLOUDFLARE_TURNSTILE_SITE_KEY",
-        "CLOUDFLARE_TURNSTILE_SECRET"
+        "CLOUDFLARE_TURNSTILE_SECRET",
+        "SLACK_ACCESS_TOKEN"
       ],
       "outputs": [".next/**", "!.next/cache/**"]
     },
