--- a/turbo.json
+++ b/turbo.json
@@ -23,6 +23,8 @@
         "CLERK_SECRET_KEY",
         "DATABASE_URL",
         "INTERCOM_APP_ID",
+        "INNGEST_EVENT_KEY",
+        "INNGEST_SIGNING_KEY",
         "NEXT_PUBLIC_APP_URL",
         "NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL",
         "NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL",
@@ -33,7 +35,8 @@
         "OPENAI_API_KEY",
         "REPLICATE_API_KEY",
         "STRIPE_API_KEY",
-        "STRIPE_WEBHOOK_SECRET"
+        "STRIPE_WEBHOOK_SECRET",
+        "UPSTASH_REDIS_REST_TOKEN"
       ],
       "outputs": [".next/**", "!.next/cache/**"]
     },
