chore(deps): add packages
AV-160

--- a/turbo.json
+++ b/turbo.json
@@ -34,7 +34,9 @@
         "REPLICATE_API_KEY",
         "STRIPE_API_KEY",
         "STRIPE_WEBHOOK_SECRET",
-        "WG_PUBLIC_NODE_URL"
+        "WG_PUBLIC_NODE_URL",
+        "UPSTASH_REDIS_REST_TOKEN",
+        "CLERK_JWKS_URL"
       ],
       "outputs": [".next/**", "!.next/cache/**"]
     },
