--- a/apps/dash/package.json
+++ b/apps/dash/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port 3000",
-    "build": "next build",
+    "wundergraph": "wunderctl up",
+    "generate": "wunderctl generate",
+    "build": "pnpm run generate && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
@@ -13,12 +15,17 @@
     "@clerk/nextjs": "^4.23.2",
     "@hookform/resolvers": "^3.2.0",
     "@prisma/client": "^5.1.1",
+    "@upstash/redis": "^1.22.0",
     "@wundergraph/nextjs": "^0.13.9",
     "@wundergraph/sdk": "^0.174.4",
+    "ai": "^2.2.2",
     "axios": "^1.4.0",
+    "inngest": "^2.5.0",
+    "langchain": "^0.0.130",
     "next": "^13.4.1",
     "next-themes": "^0.2.1",
     "openai": "^3.3.0",
+    "openai-edge": "^1.2.2",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
