--- a/turbo.json
+++ b/turbo.json
@@ -39,7 +39,9 @@
         "WG_PUBLIC_NODE_URL",
         "UPSTASH_REDIS_REST_TOKEN",
         "CLERK_JWKS_URL",
-        "UPSTASH_REDIS_REST_TOKEN"
+        "UPSTASH_REDIS_REST_TOKEN",
+        "INNGEST_EVENT_KEY",
+        "INNGEST_SIGNING_KEY"
       ],
       "outputs": [".next/**", "!.next/cache/**"]
     },
