--- a/apps/dash/package.json
+++ b/apps/dash/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000",
-    "wundergraph": "wunderctl up",
+    "dev": "wunderctl generate && concurrently \"wunderctl up --debug\" \"next dev --port 3000\"",
+    "wundergraph": "wunderctl up --debug",
     "generate": "wunderctl generate",
     "build": "pnpm run generate && next build",
     "start": "next start",
@@ -45,6 +45,7 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.2.0",
     "eslint-config-custom": "workspace:*",
     "postcss": "^8.4.24",
     "prisma": "^5.1.1",
