--- a/apps/dash/.gitignore
+++ b/apps/dash/.gitignore
@@ -1,9 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # WunderGraph build output
 .wundergraph/cache
@@ -13,10 +9,8 @@
 /coverage
 
 # next.js
-# /.next/
+/.next/
 /out/
-
-# production
 /build
 
 # misc
@@ -24,12 +18,13 @@
 *.pem
 
 # debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+pnpm-debug.log* # Specific to PNPM
 
 # local env files
-.env*
+.env
+.env.local
+.env.production
+.env.development
 
 # vercel
 .vercel
