chore(apps/dash): remove-wonky-learn-prototype #114
- removed poc from staging and production, my bad for slipping on the pr
- also removed duplicitous eslint rule for no-unused-vars

--- a/turbo.json
+++ b/turbo.json
@@ -36,10 +36,7 @@
         "REPLICATE_API_KEY",
         "STRIPE_API_KEY",
         "STRIPE_WEBHOOK_SECRET",
-        "UPSTASH_REDIS_REST_TOKEN",
-        "CLERK_JWKS_URL",
-        "INNGEST_EVENT_KEY",
-        "INNGEST_SIGNING_KEY"
+        "CLERK_JWKS_URL"
       ],
       "outputs": [".next/**", "!.next/cache/**"]
     },
